# CppND-Capstone-Pacman-Clone

./: .gitignore  CMakeLists.txt  README.md
include/: Animation.h  Assets.h  AssetsManager.h  Collider.h  Collision.h  Components.h  Entity.h  EntityManager.h  Game.h  GameController.h  GameManager.h  Graphics.h  Intersection.h  Physics.h  Player.h  Renderer.h  Tag.h  Transform.h
include/components/: EntityManager.h  Player.h
include/physics/: collider.h  data.h  rigidbody.h  tranform.h
src/: Animation.cpp  AssetsManager.cpp  Collision.cpp  Entity.cpp  EntityManager.cpp  Game.cpp  GameManager.cpp  Graphics.cpp  Intersection.cpp  Pacman.cpp  Physics.cpp  Player.cpp
